changes for merging product and details page

--- a/mobile/ionic.config.json
+++ b/mobile/ionic.config.json
@@ -16,6 +16,10 @@
     {
       "path": "/index.php/api/my_order_list",
       "proxyUrl": "http://myshop.guidersmap.com/index.php/api/my_order_list"
+    },
+    {
+      "path": "/index.php/api/signup",
+      "proxyUrl": "http://myshop.guidersmap.com/index.php/api/signup"
     }
   ]
 }
