--- a/mobile/package.json
+++ b/mobile/package.json
@@ -49,6 +49,7 @@
         "cordova-plugin-console": "^1.1.0",
         "cordova-plugin-device": "^2.0.3",
         "cordova-plugin-fcm-with-dependecy-updated": "^2.4.0",
+        "cordova-plugin-inappbrowser": "3.1.0",
         "cordova-plugin-ionic-webview": "^2.5.1",
         "cordova-plugin-local-notification": "^0.9.0-beta.2",
         "cordova-plugin-native-spinner": "^1.1.3",
@@ -100,7 +101,8 @@
             "cordova-plugin-nativestorage": {},
             "cordova-sqlite-storage": {},
             "cordova-plugin-fcm-with-dependecy-updated": {},
-            "cordova-plugin-local-notification": {}
+            "cordova-plugin-local-notification": {},
+            "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
             "android"
