--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ionicTemplate3",
-    "version": "1.2.3",
+    "version": "1.2.4",
     "author": "CSFORM",
     "homepage": "http://csform.com/",
     "private": true,
@@ -27,7 +27,7 @@
         "@firebase/polyfill": "^0.3.21",
         "@firebase/webchannel-wrapper": "^0.2.26",
         "@ionic-native/barcode-scanner": "^4.18.0",
-        "@ionic-native/camera": "^4.18.0",
+        "@ionic-native/camera": "^4.20.0",
         "@ionic-native/card-io": "^4.18.0",
         "@ionic-native/core": "4.10.0",
         "@ionic-native/fcm": "^4.20.0",
@@ -50,7 +50,7 @@
         "cordova-plugin-device": "^2.0.3",
         "cordova-plugin-fcm-with-dependecy-updated": "^2.4.0",
         "cordova-plugin-inappbrowser": "3.1.0",
-        "cordova-plugin-ionic-webview": "^2.5.1",
+        "cordova-plugin-ionic-webview": "^1.2.1",
         "cordova-plugin-local-notification": "^0.9.0-beta.2",
         "cordova-plugin-native-spinner": "^1.1.3",
         "cordova-plugin-nativestorage": "^2.3.2",
@@ -91,18 +91,14 @@
             "cordova-plugin-whitelist": {},
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
-            "cordova-plugin-ionic-webview": {
-                "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-            },
-            "cordova-plugin-camera": {
-                "ANDROID_SUPPORT_V4_VERSION": "27.+"
-            },
+            "cordova-plugin-camera": {},
             "card.io.cordova.mobilesdk": {},
             "cordova-plugin-nativestorage": {},
             "cordova-sqlite-storage": {},
             "cordova-plugin-fcm-with-dependecy-updated": {},
             "cordova-plugin-local-notification": {},
-            "cordova-plugin-inappbrowser": {}
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-ionic-webview": {}
         },
         "platforms": [
             "android"
