--- a/mobile/package.json
+++ b/mobile/package.json
@@ -49,6 +49,7 @@
         "cordova-plugin-console": "^1.1.0",
         "cordova-plugin-device": "^2.0.3",
         "cordova-plugin-fcm-with-dependecy-updated": "^2.4.0",
+        "cordova-plugin-file": "6.0.2",
         "cordova-plugin-inappbrowser": "3.1.0",
         "cordova-plugin-ionic-webview": "^1.2.1",
         "cordova-plugin-local-notification": "^0.9.0-beta.2",
@@ -98,7 +99,8 @@
             "cordova-plugin-fcm-with-dependecy-updated": {},
             "cordova-plugin-local-notification": {},
             "cordova-plugin-inappbrowser": {},
-            "cordova-plugin-ionic-webview": {}
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-file": {}
         },
         "platforms": [
             "android"
