--- a/mobile/GoogleService-Info.plist
+++ b/mobile/GoogleService-Info.plist
@@ -11,13 +11,13 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.376664871667-34oi054mclcuf43j9ia0u8jon31j6v4c</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDAjkdLZoq-qTeI-txmmKB_k63wk4PWD8I</string>
+	<string>AIzaSyBEiGZ1t8u5wERQnIrfwmGzbM3KZfHadFQ</string>
 	<key>GCM_SENDER_ID</key>
 	<string>376664871667</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.appyogi.woodcart</string>
+	<string>lakud-veen.appspot.com</string>
 	<key>PROJECT_ID</key>
 	<string>organic-food-green</string>
 	<key>STORAGE_BUCKET</key>
