--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ionicTemplate3",
-    "version": "1.3.0",
+    "version": "1.3.2",
     "author": "CSFORM",
     "homepage": "http://csform.com/",
     "private": true,
@@ -31,6 +31,7 @@
         "@ionic-native/card-io": "^4.18.0",
         "@ionic-native/core": "4.10.0",
         "@ionic-native/fcm": "^4.20.0",
+        "@ionic-native/file": "^5.16.0",
         "@ionic-native/firebase": "^4.20.0",
         "@ionic-native/google-analytics": "4.17.0",
         "@ionic-native/local-notifications": "^4.20.0",
@@ -92,7 +93,9 @@
             "cordova-plugin-whitelist": {},
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
-            "cordova-plugin-camera": {},
+            "cordova-plugin-camera": {
+                "ANDROID_SUPPORT_V4_VERSION": "27.+"
+            },
             "card.io.cordova.mobilesdk": {},
             "cordova-plugin-nativestorage": {},
             "cordova-sqlite-storage": {},
